# ai-auditor-core

./: .gitignore  README.md  docker-compose.yml  代码设计规范.md  前期准备说明.md
.github/workflows/: ci.yml
services/engine-java/: .gitignore  Dockerfile  README.md  pom.xml
services/engine-java/src/main/java/com/auditor/engine/: EngineApplication.java
services/engine-java/src/main/java/com/auditor/engine/grpc/: EmbeddedGrpcServer.java
services/engine-java/src/main/java/com/auditor/engine/service/: FormattingAuditor.java  IntegrityScanner.java  ReferenceChecker.java
services/engine-java/src/main/java/com/auditor/grpc/: AuditRequest.java  AuditRequestOrBuilder.java  AuditResponse.java  AuditResponseOrBuilder.java  AuditorProto.java  DocumentMetadata.java  DocumentMetadataOrBuilder.java  Issue.java  IssueOrBuilder.java  ParseRequest.java  ParseRequestOrBuilder.java  ParsedData.java  ParsedDataOrBuilder.java  Reference.java  ReferenceOrBuilder.java  Section.java  SectionOrBuilder.java  SemanticRequest.java  SemanticRequestOrBuilder.java  Severity.java
services/engine-java/src/main/protobuf/: auditor.proto
services/gateway-go/: .gitignore  Dockerfile  README.md  go.mod  go.sum  handlers.go  main.go  worker.go  worker_grpc.go  成员D需求清单.md
services/gateway-go/src/handlers/: http_handlers.go  http_handlers_test.go
services/gateway-go/src/store/: store.go  store_test.go
services/gateway-go/src/worker/: grpc_worker.go  local_worker.go
services/inference-py/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_client.py  成员C需求清单.md
services/inference-py/.git.bak/: config
services/inference-py/src/: __init__.py  config.py  grpc_server.py  sliding_window_processor.py
services/inference-py/src/fact_checking/: __init__.py  fact_checker.py
services/inference-py/src/logic_consistency/: __init__.py  consistency_checker.py
services/inference-py/src/protos/: __init__.py  auditor_pb2.py  auditor_pb2_grpc.py
services/inference-py/src/semantic_detection/: __init__.py  comprehensive_detector.py  llm_detector.py  semantic_detector.py
services/inference-py/tests/: test_modules.py  torch_test.py
services/parser-rs/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  output.json  output.protobin  output_with_comments.docx  成员A需求清单.md
services/parser-rs/proto/: document.proto
services/parser-rs/src/: document.rs  docx_parser.rs  grpc.rs  grpc_server.rs  grpc_service.rs  layout.rs  layout_modeler.rs  lib.rs  main.rs  oss_client.rs  parser.rs  protobuf_converter.rs  protocol_formatter.rs  writer.rs
services/parser-rs/src/core/: comment_writer.rs  layout.rs  parser.rs  pdf_parser.rs  writer.rs
services/parser-rs/src/utils/: document_processor.rs  mmap_reader.rs
services/parser-rs/tests/: 20工试1_钱玄宇_毕业论文.docx
shared/protos/: gRPC通讯说明.md
