[project]
name = "inference-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "grpcio-tools>=1.76.0",
    "langgraph>=1.0.6",
    "pymilvus>=2.3.9",
    "numpy>=2.4.1",
    "torch>=2.9.1",
    "dashscope>=1.25.8",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "pydantic-settings>=2.12.0",
    "typing-extensions>=4.15.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
cu126 = ["torch>=2.9.1", "torchvision>=0.24.1"]
dev = ["ruff>=0.6.9"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", extra = "cu126" }]
torchvision = [{ index = "pytorch-cu126", extra = "cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
