[package]
name = "parser_rs"
version = "0.1.0"
edition = "2021"
authors = ["成员A <dev@example.com>"]
description = "高性能文档解析与坐标定位引擎（Rust 模块）"
build = "build.rs"

[dependencies]
prost = { version = "0.12", features = ["derive"] }
prost-build = "0.12"
tokio = {version = "1.0",features = ["full"]}
tonic = { version = "0.10", features = ["transport", "codegen", "prost"] }
zip = "0.6"
roxmltree = "0.19"
quick-xml = { version = "0.31", features = ["serialize"] }
docx-rs = "0.4.18"
dotext = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rayon = "1.7"
uuid = { version = "1.0", features = ["v4"] }
memmap2 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"

[workspace]

[build-dependencies]
prost-build = "0.12"

[features]
with-proto = []